manifest/overlay/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inbox
spec:
  template:
    spec:
      containers:
      - name: inbox
