manifest/overlay/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inbox
---
apiVersion: v1
kind: Service
metadata:
  name: inbox-db
